kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infected-match-svc
spec:
  selector:
    app: infected-match
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: infected-store-svc
spec:
  selector:
    app: infected-store
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trace-fetch-svc
spec:
  selector:
    app: trace-fetch
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trace-store-svc
spec:
  selector:
    app: trace-store
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
